--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HW1 Assignment</title>
 </head>
 <body>
-    
+    <h2>HW 1 Assingnment<h2>
+    <p>This is my homework one assignment.</p>
 </body>
 </html>
