--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <main>
-        <h2>HW 1 Assingnment<h2>
+        <h2>HW 1 Assignment</h2>
         <p>This is my homework one assignment.</p>
     </main>
 </body>
